Add miracle config to Git

--- a/.config/git/config
+++ b/.config/git/config
@@ -39,6 +39,7 @@
     prune = true
     rebase = true
 [push]
+    autoSetupRemote = true
     default = simple
 [status]
     showUntrackedFiles = all
