Switch to dark theme

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,9 +2,9 @@
 allow_remote_control yes
 disable_ligatures always
 
-adjust_line_height 145%
+adjust_line_height 160%
 font_family Menlo
-font_size 14
+font_size 15
 
 # UI tweaks
 cursor_beam_thickness 1.5
@@ -22,4 +22,4 @@ window_padding_width 2
 macos_quit_when_last_window_closed yes
 
 # Colour scheme
-include ./themes/rose-pine/dawn.conf
+include ./themes/rose-pine/moon.conf
