Configure Kitty to use SF Mono, increase line height

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,8 +2,8 @@
 allow_remote_control yes
 disable_ligatures always
 
-adjust_line_height 160%
-font_family Menlo
+adjust_line_height 200%
+font_family SF Mono
 font_size 18
 
 # UI tweaks
