Tell tmux to use the default shell

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -21,6 +21,10 @@ setw -g mode-keys vi
 # Enable mouse support
 set -g mouse on
 
+# Set the default shell
+set -g default-command $SHELL
+set -g default-shell $SHELL
+
 # -----------------------------------------------------------------------------
 # Key bindings
 # -----------------------------------------------------------------------------
