--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@
 .config/lazygit/config.yml
 .config/lazygit/state.yml
 .config/nvim/plugin/packer_compiled.lua
+.config/raycast/extensions/
 .config/op/
 .config/valet/
