Try out Iosevka, again

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,9 +2,9 @@
 allow_remote_control yes
 disable_ligatures always
 
-adjust_line_height 200%
-font_family SF Mono
-font_size 18
+font_family Iosevka Fixed SS14 Regular
+font_size 20
+adjust_line_height 160%
 
 # UI tweaks
 cursor_beam_thickness 1.5
