Improve font configuration in Kitty

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,8 +2,11 @@
 allow_remote_control yes
 disable_ligatures always
 
-font_family Iosevka Fixed SS14 Regular
-font_size 20
+font_family Iosevka Term SS15 Regular
+font_size 21
+bold_font Iosevka Term SS15 Semibold
+italic_font Iosevka Term SS15 Italic
+bold_italic_font Iosevka Term SS15 Semibold Italic
 adjust_line_height 160%
 
 # UI tweaks
