Install Lualine, switch (back) to Nord theme

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -25,4 +25,4 @@ window_padding_width 2
 macos_quit_when_last_window_closed yes
 
 # Colour scheme
-include ./themes/rose-pine/moon.conf
+include ./themes/nord/default.conf
