Finally figure out that I can just use the terminal theme in Neovim
In summary:

:colorscheme default
:hi Normal ctermbg=none guibg=none

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -18,16 +18,16 @@ cursor_stop_blinking_after 15
 enable_audio_bell no
 tab_bar_style fade
 tab_fade 1
-active_tab_background #434C5E
-active_tab_foreground #EBCB8B
+# active_tab_background #434C5E
+# active_tab_foreground #EBCB8B
 active_tab_font_style bold
-inactive_tab_background #2E3440
-inactive_tab_foreground #D8DEE9
-macos_titlebar_color background
+# inactive_tab_background #2E3440
+# inactive_tab_foreground #D8DEE9
+# macos_titlebar_color background
 window_padding_width 2
 
 # macOS oddments
 macos_quit_when_last_window_closed yes
 
 # Colour scheme
-include ./themes/nord/default.conf
+include ./themes/black-metal/default.conf
