--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,13 +1,13 @@
 [character]
-error_symbol = '[✗](bold red) '
-success_symbol = '[~](bold green) '
+error_symbol = '[✗](bold red)'
+success_symbol = '[󰁔](bold green)'
 vimcmd_symbol = ''
 
 [directory]
 disabled = false
 read_only = " 󰌾"
+truncation_length = 5
 truncate_to_repo = false
-truncation_symbol = '../'
 
 [hostname]
 disabled = false
