--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,10 +2,11 @@
 allow_remote_control yes
 disable_ligatures always
 
-font_family Iosevka Term SS15 Regular
-bold_font Iosevka Term SS15 Semibold
-italic_font Iosevka Term SS15 Italic
-bold_italic_font Iosevka Term SS15 Semibold Italic
+font_family Cascadia Code NF Light
+bold_font Cascadia Code NF Semibold
+italic_font Cascadia Code NF Light Italic
+bold_italic_font Cascadia Code NF Semibold Italic
+
 font_size 16
 adjust_line_height 175%
 
@@ -18,16 +19,13 @@ cursor_stop_blinking_after 15
 enable_audio_bell no
 tab_bar_style fade
 tab_fade 1
-# active_tab_background #434C5E
-# active_tab_foreground #EBCB8B
 active_tab_font_style bold
-# inactive_tab_background #2E3440
-# inactive_tab_foreground #D8DEE9
-# macos_titlebar_color background
-window_padding_width 2
+placement_strategy center
+window_margin_width 4
 
 # macOS oddments
+hide_window_decorations titlebar-only
 macos_quit_when_last_window_closed yes
 
 # Colour scheme
-include ./themes/black-metal/default.conf
+include current-theme.conf
