--- a/.ssh/config
+++ b/.ssh/config
@@ -1,7 +1,4 @@
 Include config.d/*
 
 Host *
-  AddKeysToAgent yes
-  ForwardAgent yes
-  IdentityFile ~/.ssh/id_ed25519
-  UseKeychain yes
+  IdentityAgent ~/.1password/agent.sock
