Hide all window decorations in Kitty

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -20,11 +20,11 @@ enable_audio_bell no
 tab_bar_style fade
 tab_fade 1
 active_tab_font_style bold
+hide_window_decorations yes
 placement_strategy center
 window_margin_width 4
 
 # macOS oddments
-hide_window_decorations titlebar-only
 macos_quit_when_last_window_closed yes
 
 # Colour scheme
