--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -24,6 +24,10 @@ hide_window_decorations yes
 placement_strategy center
 window_margin_width 4
 
+# Key bindings
+map ctrl+shift+t new_tab_with_cwd
+map cmd+t new_tab_with_cwd
+
 # macOS oddments
 macos_quit_when_last_window_closed yes
 
