--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -20,11 +20,9 @@ enable_audio_bell no
 tab_bar_style fade
 tab_fade 1
 active_tab_font_style bold
-hide_window_decorations yes
-placement_strategy center
 window_margin_width 4
 
-# Key bindings
+# Key bindings (Linux)
 map ctrl+shift+t new_tab_with_cwd
 map cmd+t new_tab_with_cwd
 
