--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,9 +2,9 @@
 allow_remote_control yes
 disable_ligatures always
 
-font_family Cascadia Code NF Light
+font_family Cascadia Code NF Regular
 bold_font Cascadia Code NF Semibold
-italic_font Cascadia Code NF Light Italic
+italic_font Cascadia Code NF Regular Italic
 bold_italic_font Cascadia Code NF Semibold Italic
 
 font_size 13
@@ -30,4 +30,4 @@ map cmd+t new_tab_with_cwd
 macos_quit_when_last_window_closed yes
 
 # Colour scheme
-include current-theme.conf
+include themes/tokyo-night/day.conf
