--- a/.config/git/config
+++ b/.config/git/config
@@ -26,6 +26,8 @@
     format = ssh
 [gpg "ssh"]
   program = "/opt/1Password/op-ssh-sign"
+[gui]
+    skipDiscardChangeWarning = true
 [help]
     autocorrect = 10
 [init]
