--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,13 +2,12 @@
 allow_remote_control yes
 disable_ligatures always
 
-font_family Cascadia Code NF Regular
-bold_font Cascadia Code NF Semibold
-italic_font Cascadia Code NF Regular Italic
-bold_italic_font Cascadia Code NF Semibold Italic
-
-font_size 13
-adjust_line_height 180%
+font_family      family="JetBrains Mono"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+font_size 14
+adjust_line_height 175%
 
 # UI tweaks
 cursor_beam_thickness 1.5
