Winter is coming

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -29,4 +29,4 @@ map cmd+t new_tab_with_cwd
 macos_quit_when_last_window_closed yes
 
 # Colour scheme
-include themes/tokyo-night/day.conf
+include themes/tokyo-night/night.conf
