Ignore auto-generated ~/.config/psysh/ directory
Created by Laravel tooling.

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
 .config/Autodesk/FusionFabrication.FusionNesting
 .config/composer/
 .config/exercism/user.json
-.config/github-copilot/
 .config/fish/fish_variables
+.config/github-copilot/
 .config/lazygit/config.yml
 .config/lazygit/state.yml
 .config/ngrok/ngrok.yml
 .config/nvim/plugin/packer_compiled.lua
 .config/raycast/extensions/
 .config/op/
+.config/psysh/
 .config/valet/
 .config/zed/
 .config/zsh/.zsh_history
