Use Andromeda as the dark theme in Zed

--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -44,8 +44,8 @@
   },
   "theme": {
     "mode": "system",
-    "light": "One Light",
-    "dark": "One Dark"
+    "dark": "Andromeda",
+    "light": "One Light"
   },
   "vim_mode": true
 }
