--- a/.config/jgit/config
+++ b/.config/jgit/config
@@ -4,3 +4,6 @@
 [filesystem "JetBrains s.r.o.|21.0.4|/dev/disk3s5"]
 	timestampResolution = 3000 nanoseconds
 	minRacyThreshold = 0 nanoseconds
+[filesystem "JetBrains s.r.o.|21.0.5|/dev/disk3s5"]
+	timestampResolution = 2000 nanoseconds
+	minRacyThreshold = 0 nanoseconds
