--- a/.ssh/config
+++ b/.ssh/config
@@ -1,4 +1,6 @@
 Include config.d/*
 
 Host *
-  IdentityAgent ~/.1password/agent.sock
+  AddKeysToAgent yes
+  UseKeychain yes
+  IdentityFile ~/.ssh/keys.d/default
