Make Git and SSH configs play nicely with Linux

--- a/.config/git/config
+++ b/.config/git/config
@@ -50,4 +50,4 @@
 [user]
     email = code@stephenlewis.me
     name = Stephen Lewis
-    signingkey = /Users/sl/.ssh/keys.d/default.pub
+    signingkey = ~/.ssh/keys.d/default.pub
