--- a/.ssh/config
+++ b/.ssh/config
@@ -1,6 +1,7 @@
 Include config.d/*
 
 Host *
+  IgnoreUnknown UseKeychain
   AddKeysToAgent yes
   UseKeychain yes
   IdentityFile ~/.ssh/keys.d/default
