Fix PHP snippets

--- a/.config/nvim/snippets/package.json
+++ b/.config/nvim/snippets/package.json
@@ -17,6 +17,10 @@
       {
         "language": "eelixir",
         "path": "./filetypes/eelixir.json"
+      },
+      {
+        "language": "php",
+        "path": "./filetypes/php.json"
       }
     ]
   }
