Reduce font size, to play nicely with scaled displays
No idea why this is an issue for Wezterm and Kitty, but not for Ghostty.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,25 +1,26 @@
 # Typography
-allow_remote_control yes
-disable_ligatures always
+allow_remote_control        yes
+disable_ligatures           always
 
-font_family      family="JetBrains Mono"
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
-font_size 14
-adjust_line_height 175%
+font_family                 family="JetBrains Mono"
+bold_font                   auto
+italic_font                 auto
+bold_italic_font            auto
+font_size                   11
+adjust_line_height          175%
 
 # UI tweaks
-cursor_beam_thickness 1.5
-cursor_blink_interval 0.75
-cursor_shape beam
-cursor_stop_blinking_after 15
+cursor_beam_thickness       1.5
+cursor_blink_interval       0.75
+cursor_shape                beam
+cursor_stop_blinking_after  15
+enable_audio_bell           no
+hide_window_decorations     yes
+window_margin_width         4
 
-enable_audio_bell no
-tab_bar_style fade
-tab_fade 1
-active_tab_font_style bold
-window_margin_width 4
+tab_bar_style               fade
+tab_fade                    1
+active_tab_font_style       bold
 
 # Key bindings (Linux)
 map ctrl+shift+t new_tab_with_cwd
@@ -28,5 +29,3 @@ map cmd+t new_tab_with_cwd
 # macOS oddments
 macos_quit_when_last_window_closed yes
 
-# Colour scheme
-include themes/tokyo-night/night.conf
