Change Starship "success" symbol to an interpunct
Which is a fancy name for a middot. The arrow was enormous on some
terminals (*cough*Kitty*cough*), for reasons unclear.

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,6 +1,6 @@
 [character]
 error_symbol = '[✗](bold red)'
-success_symbol = '[󰁔](bold green)'
+success_symbol = '[·](bold green)'
 vimcmd_symbol = ''
 
 [directory]
