--- a/.config/kitty/no-preference-theme.auto.conf
+++ b/.config/kitty/no-preference-theme.auto.conf
@@ -1,53 +1,50 @@
-## name: Rosé Pine Dawn
-## author: mvllow
+# vim:ft=kitty
+
+## name: Tokyo Night Day
 ## license: MIT
-## upstream: https://github.com/rose-pine/kitty/blob/main/dist/rose-pine-dawn.conf
-## blurb: All natural pine, faux fur and a bit of soho vibes for the classy minimalist
+## author: Folke Lemaitre
+## upstream: https://github.com/folke/tokyonight.nvim/raw/main/extras/kitty/tokyonight_day.conf
 
-foreground               #575279
-background               #faf4ed
-selection_foreground     #575279
-selection_background     #dfdad9
 
-cursor                   #cecacd
-cursor_text_color        #575279
+background #e1e2e7
+foreground #3760bf
+selection_background #b6bfe2
+selection_foreground #3760bf
+url_color #387068
+cursor #3760bf
+cursor_text_color #e1e2e7
 
-url_color                #907aa9
+# Tabs
+active_tab_background #2e7de9
+active_tab_foreground #e9e9ec
+inactive_tab_background #c4c8da
+inactive_tab_foreground #8990b3
+#tab_bar_background #e9e9ed
 
-active_tab_foreground    #575279
-active_tab_background    #f2e9e1
-inactive_tab_foreground  #9893a5
-inactive_tab_background  #faf4ed
+# Windows
+active_border_color #2e7de9
+inactive_border_color #c4c8da
 
-# black
-color0   #f2e9e1
-color8   #9893a5
+# normal
+color0 #e9e9ed
+color1 #f52a65
+color2 #587539
+color3 #8c6c3e
+color4 #2e7de9
+color5 #9854f1
+color6 #007197
+color7 #6172b0
 
-# red
-color1   #b4637a
-color9   #b4637a
+# bright
+color8 #a1a6c5
+color9 #f52a65
+color10 #587539
+color11 #8c6c3e
+color12 #2e7de9
+color13 #9854f1
+color14 #007197
+color15 #3760bf
 
-# green
-color2   #286983
-color10  #286983
-
-# yellow
-color3   #ea9d34
-color11  #ea9d34
-
-# blue
-color4   #56949f
-color12  #56949f
-
-# magenta
-color5   #907aa9
-color13  #907aa9
-
-# cyan
-color6   #d7827e
-color14  #d7827e
-
-# white
-color7   #575279
-color15  #575279
-
+# extended colors
+color16 #b15c00
+color17 #c64343
