--- a/.config/appimagelauncher.cfg
+++ b/.config/appimagelauncher.cfg
@@ -1,3 +1,8 @@
 [AppImageLauncher]
+ask_to_move=true
 destination=/home/sl/Applications
 enable_daemon=true
+
+[appimagelauncherd]
+%23%20additional_directories_to_watch=~/otherApplications:/even/more/applications
+%23%20monitor_mounted_filesystems=false
