Switch to built-in dark colour scheme
It's not that different to Catpuccin anyway.

--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -116,7 +116,7 @@
   },
   "theme": {
     "mode": "system",
-    "dark": "Catppuccin Mocha - No Italics",
+    "dark": "Ayu Mirage",
     "light": "One Light"
   },
   "toolbar": {
