Try Zed without tabs
Not convinced, as the split handling isn't great, but giving it a go.

--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -98,8 +98,9 @@
   },
   "selection_highlight": false,
   "tab_bar": {
-    "show_nav_history_buttons": false,
-    "show_tab_bar_buttons": false
+    "show": false
+    // "show_nav_history_buttons": false,
+    // "show_tab_bar_buttons": false
   },
   "tabs": {
     "activate_on_close": "neighbour",
