--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,6 +1,7 @@
 window-inherit-working-directory = true
 
-adjust-cell-height = 50%
+adjust-cell-height = 75%
+font-size = 11
 theme = dark:tokyonight_moon,light:tokyonight-day
 window-padding-x = 4
 window-padding-y = 4
