Cajole tmux into using RGB colours correctly
This fixes the issue in Wezterm, which probably means it breaks
everything in Kitty or Ghostty. Terminals are the worst.

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -22,6 +22,11 @@ set -g mouse on
 set -g default-command $SHELL
 set -g default-shell $SHELL
 
+# Cajole tmux into using RGB colours correctly.
+# @see https://stackoverflow.com/a/41786092
+# @see https://stackoverflow.com/a/78084843
+set -as terminal-features ",xterm*:RGB"
+
 # -----------------------------------------------------------------------------
 # Key bindings
 # -----------------------------------------------------------------------------
