Set default AI provider to CoPilot Chat

--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -3,7 +3,7 @@
   "agent": {
     "always_allow_tool_actions": true,
     "default_model": {
-      "provider": "zed.dev",
+      "provider": "copilot_chat",
       "model": "claude-sonnet-4"
     },
     "model_parameters": [],
