--- a/.config/git/config
+++ b/.config/git/config
@@ -16,7 +16,7 @@
 [commit]
     gpgsign = true
 [core]
-    editor = vim
+    editor = /home/linuxbrew/.linuxbrew/bin/nvim
     hooksPath = .githooks
 [diff]
     tool = nvimdiff
