Trying out Waybar

--- a/.config/sway/config.d/keybindings.conf
+++ b/.config/sway/config.d/keybindings.conf
@@ -70,6 +70,7 @@ bindsym $mod+s splitv
 bindsym $mod+r mode "resize"
 
 mode "resize" {
+    # Resize 10px at a time.
     bindsym $left resize shrink width 10px
     bindsym $down resize grow height 10px
     bindsym $up resize shrink height 10px
@@ -79,6 +80,17 @@ mode "resize" {
     bindsym Down resize grow height 10px
     bindsym Up resize shrink height 10px
     bindsym Right resize grow width 10px
+
+    # Resize 25px at a time.
+    bindsym Shift+$left resize shrink width 25px
+    bindsym Shift+$down resize grow height 25px
+    bindsym Shift+$up resize shrink height 25px
+    bindsym Shift+$right resize grow width 25px
+
+    bindsym Shift+Left resize shrink width 25px
+    bindsym Shift+Down resize grow height 25px
+    bindsym Shift+Up resize shrink height 25px
+    bindsym Shift+Right resize grow width 25px
 
     bindsym Return mode "default"
     bindsym Escape mode "default"
