Reference external monitor by name string

--- a/.config/sway/config.d/outputs.conf
+++ b/.config/sway/config.d/outputs.conf
@@ -17,7 +17,8 @@
 # -----------------------------------------------
 
 # External monitor ("LG Electronics LG HDR 4K 0x00001FBE").
-output DP-7 {
+# Note: the `DP-n` number changes after reboot, annoyingly.
+output "LG Electronics LG HDR 4K 0x00001FBE" {
     background "~/code/setup-fedora/roles/gnome/files/assets/wallpapers/cut-paper-swirl.webp" fill
     resolution 3840x2160@30.000Hz
     scale 1.6
