--- a/.config/dconf/user.d/desktop-wm.conf
+++ b/.config/dconf/user.d/desktop-wm.conf
@@ -20,6 +20,7 @@ switch-to-workspace-6=['<Super>6']
 switch-to-workspace-7=['<Super>7']
 switch-to-workspace-8=['<Super>8']
 switch-to-workspace-9=['<Super>9']
+toggle-fullscreen=['<Super>f']
 toggle-maximized=['<Super>m']
 
 [org/gnome/desktop/wm/preferences]
