Add the thing Neovim told me to add to the tmux config

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -27,6 +27,9 @@ set -g default-shell $SHELL
 # @see https://stackoverflow.com/a/78084843
 set -as terminal-features ",xterm*:RGB"
 
+# Fix that thing the Neovim :checkhealth command keeps telling me to fix.
+set -g focus-events on
+
 # -----------------------------------------------------------------------------
 # Key bindings
 # -----------------------------------------------------------------------------
