--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -2,7 +2,7 @@ window-inherit-working-directory = true
 
 adjust-cell-height = 75%
 font-size = 11
-theme = dark:tokyonight_moon,light:tokyonight-day
+theme = dark:TokyoNight Moon,light:TokyoNight Day
 window-padding-x = 4
 window-padding-y = 4
 window-padding-balance = true
