--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 .config/wireguard/*.conf
 .config/zed/embeddings/
 .config/zed/prompts/
+.config/zsh/.zcompdump
 .config/zsh/.zsh_history
 .gnupg/
 .ssh/known_hosts
