Update tmux.conf for Linux

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -38,15 +38,15 @@ bind Space source-file ~/.config/tmux/tmux.conf \; display "Reloaded tmux config
 
 # More vim-like copy-paste.
 #
-# Enter vi mode using `Prefix-Escape`. Use `v` (no prefix) to start selecting 
+# Enter vi mode using `Prefix-Escape`. Use `v` (no prefix) to start selecting
 # text and `y` to yank the selected text to the system clipboard.
 #
 # Use `Prefix-p` to paste text from the system clipboard.
 bind Escape copy-mode
 bind-key -T copy-mode-vi v send -X begin-selection
-bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "wl-copy"
 unbind p
-bind p run "tmux set-buffer \"$(pbpaste)\"; tmux paste-buffer"
+bind p run "tmux set-buffer \"$(wl-paste)\"; tmux paste-buffer"
 
 # -----------------------------------------------------------------------------
 # Appearance
