Export dconf settings

--- a/.config/dconf/settings/desktop.conf
+++ b/.config/dconf/settings/desktop.conf
@@ -22,8 +22,12 @@ name='suse-yast.directory'
 translate=true
 
 [background]
-picture-uri='file:////home/sl/Pictures/Wallpapers/cut-paper-swirl.webp'
-picture-uri-dark='file:////home/sl/Pictures/Wallpapers/cut-paper-swirl.webp'
+color-shading-type='solid'
+picture-options='zoom'
+picture-uri='file:///usr/share/backgrounds/gnome/pixel-pusher-l.jxl'
+picture-uri-dark='file:///usr/share/backgrounds/gnome/pixel-pusher-d.jxl'
+primary-color='#967864'
+secondary-color='#000000'
 
 [break-reminders/eyesight]
 play-sound=true
@@ -39,14 +43,16 @@ sources=[('xkb', 'us')]
 xkb-options=['compose:menu', 'lv3:ralt_switch']
 
 [interface]
+accent-color='blue'
 color-scheme='prefer-dark'
 enable-animations=true
 enable-hot-corners=false
+monospace-font-name='JetBrains Mono 12'
 show-battery-percentage=false
 toolkit-accessibility=false
 
 [notifications]
-application-children=['org-gnome-software', 'org-freedesktop-problems-applet', 'org-gnome-ptyxis', 'gnome-power-panel', 'org-gnome-epiphany', 'kitty', 'org-mozilla-firefox', 'com-discordapp-discord', 'org-gnome-solanum', 'com-spotify-client', 'com-mitchellh-ghostty', 'org-gnome-nautilus', 'setroubleshoot', 'io-github-seadve-kooha', 'com-mattjakeman-extensionmanager', 'org-gnome-characters', 'com-calibre-ebook-calibre', 'com-github-marhkb-pods', 'google-chrome', 'org-signal-signal', 'gnome-printers-panel', 'org-gnome-shell-extensions-gsconnect', 'fr-handbrake-ghb', 'gnome-about-panel', 'com-fastmail-fastmail', 'org-gnome-extensions', 'com-brave-browser', 'org-gnome-showtime', 'org-fedoraproject-mediawriter']
+application-children=['org-gnome-software', 'org-freedesktop-problems-applet', 'org-gnome-ptyxis', 'gnome-power-panel', 'org-gnome-epiphany', 'kitty', 'org-mozilla-firefox', 'com-discordapp-discord', 'org-gnome-solanum', 'com-spotify-client', 'com-mitchellh-ghostty', 'org-gnome-nautilus', 'setroubleshoot', 'io-github-seadve-kooha', 'com-mattjakeman-extensionmanager', 'org-gnome-characters', 'com-calibre-ebook-calibre', 'com-github-marhkb-pods', 'google-chrome', 'org-signal-signal', 'gnome-printers-panel', 'org-gnome-shell-extensions-gsconnect', 'fr-handbrake-ghb', 'gnome-about-panel', 'com-fastmail-fastmail', 'org-gnome-extensions', 'com-brave-browser', 'org-gnome-showtime', 'org-fedoraproject-mediawriter', 'org-gnome-calculator', 'com-usebruno-bruno', 'org-gnome-settings', 'dev-zed-zed']
 show-banners=true
 
 [notifications/application/com-brave-browser]
@@ -72,6 +78,12 @@ application-id='com.mitchellh.ghostty.desktop'
 
 [notifications/application/com-spotify-client]
 application-id='com.spotify.Client.desktop'
+
+[notifications/application/com-usebruno-bruno]
+application-id='com.usebruno.Bruno.desktop'
+
+[notifications/application/dev-zed-zed]
+application-id='dev.zed.Zed.desktop'
 
 [notifications/application/fr-handbrake-ghb]
 application-id='fr.handbrake.ghb.desktop'
@@ -100,6 +112,9 @@ application-id='org.fedoraproject.MediaWriter.desktop'
 [notifications/application/org-freedesktop-problems-applet]
 application-id='org.freedesktop.problems.applet.desktop'
 
+[notifications/application/org-gnome-calculator]
+application-id='org.gnome.Calculator.desktop'
+
 [notifications/application/org-gnome-characters]
 application-id='org.gnome.Characters.desktop'
 
@@ -114,6 +129,9 @@ application-id='org.gnome.Nautilus.desktop'
 
 [notifications/application/org-gnome-ptyxis]
 application-id='org.gnome.Ptyxis.desktop'
+
+[notifications/application/org-gnome-settings]
+application-id='org.gnome.Settings.desktop'
 
 [notifications/application/org-gnome-shell-extensions-gsconnect]
 application-id='org.gnome.Shell.Extensions.GSConnect.desktop'
@@ -145,6 +163,13 @@ two-finger-scrolling-enabled=true
 
 [privacy]
 report-technical-problems=true
+
+[screensaver]
+color-shading-type='solid'
+picture-options='zoom'
+picture-uri='file:///usr/share/backgrounds/gnome/pixel-pusher-l.jxl'
+primary-color='#967864'
+secondary-color='#000000'
 
 [search-providers]
 sort-order=['org.gnome.Settings.desktop', 'org.gnome.Contacts.desktop', 'org.gnome.Nautilus.desktop']
