Back-up dconf settings

--- a/.config/dconf/settings/gnome.conf
+++ b/.config/dconf/settings/gnome.conf
@@ -60,7 +60,10 @@ sources=[('xkb', 'us')]
 monospace-font-name='Cascadia Code NF 11'
 
 [desktop/notifications]
-application-children=['org-gnome-software', 'org-gnome-nautilus', 'org-freedesktop-problems-applet', 'gnome-power-panel', 'gnome-about-panel', 'org-mozilla-firefox']
+application-children=['org-gnome-software', 'org-gnome-nautilus', 'org-freedesktop-problems-applet', 'gnome-power-panel', 'gnome-about-panel', 'org-mozilla-firefox', 'org-gnome-ptyxis', 'app-zen-browser-zen']
+
+[desktop/notifications/application/app-zen-browser-zen]
+application-id='app.zen_browser.zen.desktop'
 
 [desktop/notifications/application/gnome-about-panel]
 application-id='gnome-about-panel.desktop'
@@ -73,6 +76,9 @@ application-id='org.freedesktop.problems.applet.desktop'
 
 [desktop/notifications/application/org-gnome-nautilus]
 application-id='org.gnome.Nautilus.desktop'
+
+[desktop/notifications/application/org-gnome-ptyxis]
+application-id='org.gnome.Ptyxis.desktop'
 
 [desktop/notifications/application/org-gnome-software]
 application-id='org.gnome.Software.desktop'
@@ -185,6 +191,11 @@ switch-to-application-1=@as []
 switch-to-application-2=@as []
 switch-to-application-3=@as []
 switch-to-application-4=@as []
+switch-to-application-5=@as []
+switch-to-application-6=@as []
+switch-to-application-7=@as []
+switch-to-application-8=@as []
+switch-to-application-9=@as []
 toggle-overview=['<Super>space']
 
 [shell/world-clocks]
